--- a/css/country.css
+++ b/css/country.css
@@ -1180,7 +1180,7 @@ p {
 
 @media all and (max-width: 767px) {
   .from-germany__mask {
-    width: 45%;
+    display: none;
   }
 }
 
@@ -1217,6 +1217,7 @@ p {
   .from-germany__title {
     font-size: 1.625rem;
     text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.8);
+    max-width: 18rem;
   }
 }
 
@@ -1280,6 +1281,9 @@ p {
   .from-germany__btn {
     margin: 0 auto;
     display: block;
+    font-size: 0.75rem;
+    font-weight: 700;
+    padding: 0.8rem 1rem;
   }
 }
 
@@ -1415,6 +1419,36 @@ p {
   display: block;
 }
 
+.from-germany .slick-slide::before {
+  content: '';
+  background: #0A7990;
+  opacity: 0.4;
+  height: 100%;
+  width: 45%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+@media all and (max-width: 1240px) {
+  .from-germany .slick-slide::before {
+    width: 50%;
+  }
+}
+
+@media all and (max-width: 1025px) {
+  .from-germany .slick-slide::before {
+    width: 58%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .from-germany .slick-slide::before {
+    width: 10rem;
+  }
+}
+
 .import {
   background: url("../img/earth_bg2.jpg") no-repeat center left/cover;
   padding: 7rem 0;
@@ -1523,6 +1557,12 @@ p {
   margin: 0rem 1rem -0.3rem 0;
 }
 
+@media all and (max-width: 767px) {
+  .import__logistic::before {
+    margin: 0rem 1.3rem -0.3rem 0;
+  }
+}
+
 .import__customs::before {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1544,7 +1584,8 @@ p {
 
 @media all and (max-width: 767px) {
   .import__customs::before {
-    width: 4.5rem;
+    width: 5.5rem;
+    margin: 0rem 1.5rem -0.3rem 0;
   }
 }
 
@@ -1569,7 +1610,7 @@ p {
 
 @media all and (max-width: 767px) {
   .import__wed::before {
-    width: 9rem;
+    width: 14.5rem;
   }
 }
 
@@ -1739,6 +1780,12 @@ p {
   background: #0A7990;
 }
 
+@media all and (max-width: 767px) {
+  .about {
+    padding: 1.5rem 0 0;
+  }
+}
+
 .about__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1773,6 +1820,12 @@ p {
   margin-bottom: 5rem;
 }
 
+@media all and (max-width: 767px) {
+  .about__text-wrap {
+    margin-bottom: 2rem;
+  }
+}
+
 .about__img-wrap {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
@@ -1800,6 +1853,12 @@ p {
   opacity: 0.1;
 }
 
+@media all and (max-width: 767px) {
+  .about__decor-bg {
+    display: none;
+  }
+}
+
 .about__title {
   font-size: 3.125rem;
   font-weight: bold;
@@ -1813,6 +1872,14 @@ p {
 @media all and (max-width: 1025px) {
   .about__title {
     font-size: 2rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .about__title {
+    font-size: 1.1rem;
+    line-height: 150%;
+    max-width: 20rem;
   }
 }
 
@@ -1837,12 +1904,29 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .about__title::before {
+    display: block;
+    font-size: 160px;
+    top: 1.8rem;
+    left: -2rem;
+  }
+}
+
 .about__text {
   max-width: 34rem;
   color: #F0F8F7;
   margin-top: 3.125rem;
   font-size: 1.125rem;
   line-height: 156%;
+}
+
+@media all and (max-width: 767px) {
+  .about__text {
+    font-size: 0.875rem;
+    margin-top: 1.5rem;
+    line-height: 160%;
+  }
 }
 
 .about__img {
@@ -1918,9 +2002,21 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .about__video-wrap {
+    height: 288px;
+  }
+}
+
 .about__video-area {
   background: #fff;
   padding: 4rem 0;
+}
+
+@media all and (max-width: 767px) {
+  .about__video-area {
+    padding: 2rem 0;
+  }
 }
 
 .about__video-text {
@@ -1942,6 +2038,13 @@ p {
 .about__video-text p {
   font-size: 1.125rem;
   line-height: 156%;
+}
+
+@media all and (max-width: 767px) {
+  .about__video-text p {
+    font-size: 0.875rem;
+    line-height: 160%;
+  }
 }
 
 .about__video {
@@ -1990,13 +2093,32 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .about__sub-title {
+    font-size: 1rem;
+    width: 10rem;
+  }
+}
+
 .about__manager-name {
   font-size: 1.5rem;
+}
+
+@media all and (max-width: 767px) {
+  .about__manager-name {
+    font-size: 1rem;
+  }
 }
 
 .about__position {
   font-size: 1.125rem;
   margin-bottom: 1rem;
+}
+
+@media all and (max-width: 767px) {
+  .about__position {
+    font-size: 0.8rem;
+  }
 }
 
 .about__tel {
@@ -2043,6 +2165,12 @@ p {
   z-index: 3;
 }
 
+@media all and (max-width: 767px) {
+  .about__img-manager {
+    width: 10rem;
+  }
+}
+
 .imp-exp {
   position: relative;
   padding: 0 0 3rem;
@@ -2059,11 +2187,23 @@ p {
   z-index: -1;
 }
 
+@media all and (max-width: 767px) {
+  .imp-exp__plunk {
+    width: 65%;
+  }
+}
+
 .imp-exp__title {
   color: #F0F8F7;
   font-size: 1.5rem;
   font-weight: 600;
   padding-top: 0.8rem;
+}
+
+@media all and (max-width: 767px) {
+  .imp-exp__title {
+    font-size: 1.1rem;
+  }
 }
 
 .imp-exp__row {
@@ -2176,6 +2316,12 @@ p {
   color: #F0F8F7;
 }
 
+@media all and (max-width: 767px) {
+  .route {
+    padding: 2rem 0;
+  }
+}
+
 .route__row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2211,6 +2357,13 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .route__title {
+    font-size: 1.1rem;
+    margin-bottom: 1.75rem;
+  }
+}
+
 .route__title::before {
   content: "02";
   -webkit-transform: rotate(270deg);
@@ -2232,6 +2385,15 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .route__title::before {
+    display: block;
+    font-size: 10rem;
+    top: 1.6rem;
+    left: -2rem;
+  }
+}
+
 .route__sub-title {
   font-size: 1.625rem;
   font-weight: 600;
@@ -2243,6 +2405,12 @@ p {
   .route__sub-title {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .route__sub-title {
+    font-size: 0.9375rem;
   }
 }
 
@@ -2259,9 +2427,22 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .route__text {
+    font-size: 0.8125rem;
+    line-height: 160%;
+  }
+}
+
 .route__comparison {
   font-size: 1.125rem;
   font-weight: 600;
+}
+
+@media all and (max-width: 767px) {
+  .route__comparison {
+    font-size: 0.8125rem;
+  }
 }
 
 .route__img {
@@ -2318,6 +2499,12 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .route__plus span {
+    max-width: 12rem;
+  }
+}
+
 .route__benefit {
   position: relative;
 }
@@ -2332,6 +2519,7 @@ p {
   content: ' ';
   background-image: url("../img/like.svg");
   background-size: 5rem 5rem;
+  background-repeat: no-repeat;
   height: 5rem;
   width: 5rem;
 }
@@ -2340,6 +2528,14 @@ p {
   .route__benefit::before {
     top: 0;
     left: 30rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .route__benefit::before {
+    top: 0;
+    left: 114%;
+    right: auto;
   }
 }
 
@@ -2365,6 +2561,12 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .route__minus span {
+    max-width: 12rem;
+  }
+}
+
 .route__negative {
   position: relative;
 }
@@ -2381,6 +2583,7 @@ p {
   content: ' ';
   background-image: url("../img/like.svg");
   background-size: 5rem 5rem;
+  background-repeat: no-repeat;
   height: 5rem;
   width: 5rem;
 }
@@ -2389,6 +2592,14 @@ p {
   .route__negative::before {
     top: 0;
     left: 30rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .route__negative::before {
+    top: 0;
+    left: 114%;
+    right: auto;
   }
 }
 
@@ -2477,6 +2688,12 @@ p {
   padding: 4rem 0 0;
 }
 
+@media all and (max-width: 767px) {
+  .pricing {
+    padding: 2rem 0 0;
+  }
+}
+
 .pricing__title {
   color: #0A7990;
   font-size: 3.125rem;
@@ -2488,6 +2705,19 @@ p {
   .pricing__title {
     font-size: 2rem;
     margin-bottom: 4rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .pricing__title {
+    font-size: 1.1rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .pricing__img-wrap {
+    display: none;
   }
 }
 
@@ -2510,6 +2740,15 @@ p {
 @media all and (max-width: 1699px) {
   .pricing__title::before {
     display: none;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .pricing__title::before {
+    display: block;
+    font-size: 10rem;
+    top: 1.8rem;
+    left: -2.5rem;
   }
 }
 
@@ -2542,6 +2781,12 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .pricing__row {
+    margin-bottom: 2rem;
+  }
+}
+
 @media all and (max-width: 1240px) {
   .pricing__row--2 {
     margin-bottom: 2rem;
@@ -2554,6 +2799,16 @@ p {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .pricing__row--2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 0;
   }
 }
 
@@ -2576,12 +2831,26 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .pricing__text {
+    margin: 0;
+    font-size: 0.8125rem;
+    line-height: 160%;
+  }
+}
+
 .pricing__sub-title {
   color: #F0F8F7;
   mix-blend-mode: lighten;
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
+}
+
+@media all and (max-width: 767px) {
+  .pricing__sub-title {
+    font-size: 1.1rem;
+  }
 }
 
 .pricing__list-text {
@@ -2593,8 +2862,21 @@ p {
   margin-bottom: 0.5rem;
 }
 
+@media all and (max-width: 767px) {
+  .pricing__list-text {
+    font-size: 0.8125rem;
+    line-height: 160%;
+  }
+}
+
 .pricing__list {
   margin-left: 1.25rem;
+}
+
+@media all and (max-width: 767px) {
+  .pricing__list {
+    max-width: 17rem;
+  }
 }
 
 .pricing__list-wrap {
@@ -2607,6 +2889,13 @@ p {
 @media all and (max-width: 1025px) {
   .pricing__list-wrap {
     width: 44%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .pricing__list-wrap {
+    padding: 1rem 0;
+    width: 100%;
   }
 }
 
@@ -2633,9 +2922,23 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .pricing__list-wrap::before {
+    height: 25rem;
+    left: -1rem;
+    width: 110%;
+  }
+}
+
 .pricing__table-wrap {
   max-width: 29rem;
   margin-bottom: 2rem;
+}
+
+@media all and (max-width: 767px) {
+  .pricing__table-wrap {
+    margin-bottom: 1rem;
+  }
 }
 
 .pricing__tables-wrap {
@@ -2654,6 +2957,13 @@ p {
   color: #095F71;
 }
 
+@media all and (max-width: 767px) {
+  .pricing__tables-wrap {
+    width: 100%;
+    margin-top: 1rem;
+  }
+}
+
 .pricing__tables-wrap::before {
   content: '';
   background: #2EDBFF;
@@ -2664,6 +2974,13 @@ p {
   top: -1.5rem;
   left: -15%;
   z-index: 0;
+}
+
+@media all and (max-width: 767px) {
+  .pricing__tables-wrap::before {
+    width: 135%;
+    height: 110%;
+  }
 }
 
 .pricing__table {
@@ -2773,6 +3090,12 @@ p {
   }
 }
 
+@media all and (max-width: 1025px) {
+  .spec {
+    padding: 2rem 0 1rem;
+  }
+}
+
 .spec__main-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2838,6 +3161,13 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .spec__title {
+    font-size: 1.1rem;
+    margin: 0 0 1rem;
+  }
+}
+
 .spec__title::before {
   content: "04";
   -webkit-transform: rotate(270deg);
@@ -2860,6 +3190,15 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .spec__title::before {
+    display: block;
+    font-size: 10rem;
+    top: 2rem;
+    left: -2.5rem;
+  }
+}
+
 .spec__text {
   margin-bottom: 2rem;
   max-width: 36.25rem;
@@ -2869,6 +3208,12 @@ p {
 @media all and (max-width: 1025px) {
   .spec__text {
     margin-bottom: 1rem;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .spec__text {
+    font-size: 0.8125rem;
   }
 }
 
@@ -2882,6 +3227,12 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .spec__text:last-child {
+    margin-bottom: 1rem;
+  }
+}
+
 .spec__map {
   width: 50%;
   height: 412px;
@@ -2890,6 +3241,12 @@ p {
 @media all and (max-width: 1025px) {
   .spec__map {
     width: 100%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .spec__map {
+    display: none;
   }
 }
 
@@ -2973,6 +3330,12 @@ p {
   -webkit-transition: background-color 0.2s;
   transition: background-color 0.2s;
   cursor: pointer;
+}
+
+.questions .accordion__item .accordion__title-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .questions .accordion__item .accordion__title-text span {
@@ -3059,7 +3422,7 @@ p {
 
 @media all and (max-width: 1025px) {
   .docs {
-    padding: 3rem 0 2rem;
+    padding: 3rem 0;
   }
 }
 
@@ -3100,13 +3463,13 @@ p {
 .docs__sub-title {
   font-size: 1.75rem;
   font-weight: 600;
-  margin: 4rem 0 2rem;
+  margin: 4rem 0 3rem;
 }
 
 @media all and (max-width: 1025px) {
   .docs__sub-title {
     font-size: 1.5rem;
-    margin: 3rem 0 1.5rem;
+    margin: 3rem 0 3rem;
   }
 }
 
@@ -3178,6 +3541,59 @@ p {
   margin-left: 3rem;
   position: relative;
   z-index: 2;
+}
+
+.docs .regular {
+  position: relative;
+}
+
+.docs .regular::after {
+  content: '';
+  height: calc(100% - 50px);
+  width: 12%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(267.31deg, #FFFFFF 62.73%, rgba(255, 255, 255, 0) 96.63%);
+}
+
+.docs .slick-list {
+  padding: 50px 0 0;
+  margin: -35px 0 0;
+}
+
+.docs__slider-item-link {
+  display: block;
+  position: relative;
+  margin: 10px;
+}
+
+.docs__slider-item-link span {
+  position: absolute;
+  top: -55px;
+  left: 0;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  color: #095F71;
+  display: block;
+  text-align: center;
+  padding: 15px 18px;
+  background: #F0F8F7;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  white-space: nowrap;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.docs__slider-item-link:hover span {
+  opacity: 1;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 
 .docs .slick-prev, .docs .slick-next {
@@ -3440,6 +3856,12 @@ p {
   padding: 3.2rem 0 3.2rem;
 }
 
+@media all and (max-width: 767px) {
+  .service {
+    padding: 2rem 0 2rem;
+  }
+}
+
 .service__plunk {
   position: absolute;
   left: 0;
@@ -3456,11 +3878,24 @@ p {
   }
 }
 
+@media all and (max-width: 767px) {
+  .service__plunk {
+    width: 100%;
+    top: 2rem;
+  }
+}
+
 .service__title {
   color: #F0F8F7;
   font-size: 1.5rem;
   font-weight: 600;
   padding-top: 0.8rem;
+}
+
+@media all and (max-width: 767px) {
+  .service__title {
+    font-size: 1.1rem;
+  }
 }
 
 .service__row {
@@ -3530,6 +3965,12 @@ p {
   z-index: 2;
 }
 
+@media all and (max-width: 767px) {
+  .service__link {
+    margin: 0 auto;
+  }
+}
+
 .service__links {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3547,12 +3988,29 @@ p {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .service__links {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
 .service__item {
   position: relative;
   margin: 0  0 2.5rem 2.5rem;
+}
+
+@media all and (max-width: 767px) {
+  .service__item {
+    margin: 0  0 2rem 0;
+  }
 }
 
 .service__link-cap {
@@ -3574,6 +4032,21 @@ p {
           justify-content: center;
 }
 
+@media all and (max-width: 1025px) {
+  .service__link-cap {
+    height: 1.2rem;
+    width: 100%;
+    font-size: 0.75rem;
+  }
+}
+
+.service__group-cap {
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: #095F71;
+  margin-bottom: 1.5rem;
+}
+
 .service__img {
   -webkit-filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
@@ -3588,8 +4061,16 @@ p {
   }
 }
 
-.service__img--2 {
-  margin-right: 1rem;
+@media all and (max-width: 767px) {
+  .service__img {
+    max-width: 148px;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .service__img--2 {
+    margin-right: 0rem;
+  }
 }
 
 .service .vertical-tabs:before {
@@ -3681,6 +4162,12 @@ p {
   .service .service-mob-slider {
     margin-top: 5rem;
     display: block;
+  }
+}
+
+@media all and (max-width: 767px) {
+  .service .service-mob-slider {
+    margin-top: 3rem;
   }
 }
 
