--- a/#src/scss/country.scss
+++ b/#src/scss/country.scss
@@ -2610,6 +2610,9 @@
 	@include nmd {
 		padding: 2rem 0 6rem;
 	}
+	@include nsm {
+		padding: 2rem 0 2rem;
+	}
     &__title {
         font-size: 3.125rem;
         font-weight: 700;
@@ -2618,6 +2621,10 @@
         position: relative;
 		@include nmd {
 			font-size: 2rem;
+		}
+		@include nsm {
+			font-size: 1.1rem;
+			margin: 0 0 1rem;
 		}
     }
     &__title::before {
@@ -2636,6 +2643,12 @@
         @include nxl{
             display: none;
         }
+		@include nsm {
+			display: block;
+			font-size: 10rem;
+			top: 1.8rem;
+        	left: -2.5rem;
+		}
 	}
     .accordion {
         max-width: 58rem;
@@ -2645,7 +2658,14 @@
         margin: 5px auto;
         border-bottom: 1px solid $colorw;
         padding: 5px 0;
+		@include nsm {
+			font-size: 0.75rem;
+			border-bottom: none;
+		}
     }
+	.accordion__item:nth-child(2n){
+		background: rgba(198, 217, 255, 0.35);
+	}
     .accordion__item .accordion__title {
         position: relative;
         display: flex;
@@ -2659,6 +2679,11 @@
         -webkit-transition: background-color 0.2s;
         transition: background-color 0.2s;
         cursor: pointer;
+		@include nsm {
+			font-size: 0.75rem;
+			line-height: 150%;
+			padding-left: 0.75rem;
+		}
     }
     // .accordion__item:last-child .accordion__title {
     //     margin-left: 3em;
@@ -2671,6 +2696,11 @@
             font-family: $font-alt;
             font-size: 1.5rem;
             margin-right: 1.5rem;
+			@include nsm {
+				font-size: 1rem;
+				font-weight: 400;
+				margin-right: 0.5rem;
+			}
         }
     }
     
@@ -2721,6 +2751,10 @@
         display: none;
         color: $colorw;
         background: rgba(20, 143, 182, 0.3);
+		@include nsm {
+			font-size: 0.7rem;
+			line-height: 200%;
+		}
     }
     .accordion__content {
         ul {
@@ -2733,6 +2767,9 @@
     .accordion__item .accordion__arrow-item {
         font-weight: 300;
         font-size: 3.5rem;
+		@include nsm {
+			font-size: 2.5rem;
+		}
     }
 }
 
@@ -2743,6 +2780,9 @@
 	@include nmd {
 		padding: 3rem 0;
 	}
+	@include nsm {
+		padding: 2rem 0 4rem;
+	}
     &__title {
         font-size: 3.125rem;
         font-weight: 700;
@@ -2750,6 +2790,9 @@
 		@include nmd {
 			font-size: 2rem;
 		}	
+		@include nsm {
+			font-size: 1.1rem;
+		}
     }
     &__title::before {
 		content: "05";
@@ -2767,14 +2810,25 @@
         @include nxl{
             display: none;
         }
+		@include nsm {
+			display: block;
+			font-size: 10rem;
+			top: 1.8rem;
+        	left: -2rem; 
+		}
+		
 	}
     &__sub-title {
         font-size: 1.75rem;
         font-weight: 600;
-        margin: 4rem 0 3rem;
+        margin: 0rem 0 3rem;
 		@include nmd {
 			font-size: 1.5rem;
-			margin: 3rem 0 3rem;
+			margin: 0rem 0 3rem;
+		}
+		@include nsm {
+			font-size: 0.9375rem;
+			margin: 2rem 0 1rem;
 		}
     }
     &__cap {
@@ -2782,6 +2836,11 @@
         font-weight: 600;
         margin-left: 0.85rem;
         margin-bottom: 1.5rem;
+		@include nsm {
+			font-size: 0.875rem;
+			font-weight: 500;
+			margin-left: 0;
+		}
     }
     &__decor {
         width: 35rem;
@@ -2790,6 +2849,9 @@
         opacity: 0.05;
         position: absolute;
         z-index: 0;
+		@include nsm {
+			display: none;
+		}
         &--1 {
             right: 0;
             top: 25%;
@@ -2805,9 +2867,42 @@
         align-items: flex-start;
         justify-content: space-between;
         margin-top: 3rem;
+		height: auto;
+		@include nsm {
+			flex-direction: column;
+			overflow: hidden;
+			// max-height: 23rem;
+			margin-top: 1rem;
+		}
     }
+	.docs__content-toggle {
+		display: none;
+		@include nsm {
+			display: block;
+			font-size: 0.75rem;
+			font-weight: 500;
+			text-decoration: underline;
+			color: $pryme-alt;
+			text-align: center;
+		}
+	}
+	.docs__wrap .hide {
+		overflow: hidden;
+		@include nsm {
+			height: 23rem;
+		}
+    }
+	.hide {
+		height: auto;
+		@include nsm {
+			height: 23rem;
+		}	
+	}
     &__list {
         margin-left: 2rem;   
+		@include nsm {
+			margin-left: 1rem;  
+		}
     }
     &__items {
         list-style-type: square;
@@ -2821,16 +2916,25 @@
         font-weight: 300;
         line-height: 80%;
         color: $pryme-alt;
+		@include nsm {
+			font-size: 0.8125rem;
+		}
     }
     &__import {
 		position: relative;
 		z-index: 2;
         margin-bottom: 3rem;
+		@include nsm {
+			margin-bottom: 1rem;
+		}
     }
     &__export {
         margin-left: 3rem;
         position: relative;
 		z-index: 2;
+		@include nsm {
+			margin-left: 0rem;  
+		}
     }
 	.regular{
 		position: relative;
@@ -2946,7 +3050,11 @@
     padding: 4rem 0;
     color: $pryme-alt;
 	@include nmd {
-		 padding: 2rem 0;
+		padding: 2rem 0;
+	}
+	@include nsm {
+		background: #fff;
+		padding: 2rem 0 0;
 	}
     &__row {
         display: flex;
@@ -2962,6 +3070,7 @@
         justify-content: space-between;
         flex-direction: column; 
         width: 100%;
+		overflow: hidden;
     }
     &__img-wrap {
         width: 50%;
@@ -2973,12 +3082,18 @@
 			width: 100%;
 			justify-content: space-between;
 		}
+		@include nsm {
+			display: none;
+		}
     }
     &__left {
         width: 100%;
         max-width: 36.2rem;
 		@include nlg {
 			max-width: 55rem;
+		}
+		@include nsm {
+			max-width: 19rem;
 		}
     }
     &__right {
@@ -2992,6 +3107,10 @@
         margin-bottom: 1rem;
 		@include nmd {
 		 	font-size: 2rem;
+		}
+		@include nsm {
+		 	font-size: 1.1rem;
+			 margin-bottom: 0rem;
 		}
     }
     &__title::before {
@@ -3010,12 +3129,26 @@
         @include nxl{
             display: none;
         }
+		@include nsm{
+            display: block;
+			top: 1.8rem;
+        	left: -2.5rem;
+			font-size: 10rem;
+        }
 	}
     &__sub-cap {
         font-size: 1.25rem;
         font-weight: 700;
         margin-top: 3rem;
         margin-bottom: 2rem;
+		&--2 {
+			@include nsm {
+		 		margin-top: 1rem;
+			}
+		}
+		@include nsm {
+		 	font-size: 0.925rem;
+		}
     }
 	&__decor-line {
 		background: #F96B30;
@@ -3023,12 +3156,18 @@
 		width: 3rem;
 		height: 0.375rem;
 		margin: 0.2rem 0 1rem;
+		@include nsm {
+			display: none;
+		}
 	}
     &__sub-title {
         font-size: 1rem;
         font-weight: 600;
         margin: 2rem 0 0rem;
         color: $pryme-alt;
+		@include nsm {
+		 	font-size: 0.85rem;
+		}
     }
     &__list {
         margin-left: 1.125rem;
@@ -3041,6 +3180,9 @@
         color: $pryme-alt;;
         text-decoration: underline;
         font-weight: 300;
+		@include nsm {
+			font-size: 0.825rem;
+		}
     }
     &__img {
         filter: drop-shadow(3px 3px 30px rgba(0, 0, 0, 0.3));
@@ -3050,6 +3192,25 @@
 			width: 48%;
 		}
     }
+	.info__content-toggle {
+		display: none;
+		@include nsm {
+			display: block;
+			font-size: 0.75rem;
+			font-weight: 500;
+			text-decoration: underline;
+			color: $pryme-alt;
+			text-align: center;
+			width: 100%;
+			margin-top: 1rem;
+		}
+	}
+	.hide {
+		height: auto;
+		@include nsm {
+			height: 36rem;
+		}	
+	}
 }
 
 .service {
@@ -3316,12 +3477,18 @@
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
+		@include nsm {
+			flex-direction: column;
+		}
     }
     &__logo {
         max-width: 9.375rem;
     }
     &__contact-wrap {
         margin: 0 5rem 0 3.2rem;
+		@include nsm {
+			margin: 1rem 0;
+		}
     }
     &__cont-item {
         line-height: 200%;
@@ -3337,6 +3504,10 @@
 	&__social-link {
 		margin-left: 0.5625rem;
 		transition: 0.3s;
+		@include nsm {
+			margin-left: 0;
+			margin-right: 0.5625rem;
+		}
 	}
 	&__social-link:hover {
 		transform: scale(1.08);
@@ -3395,6 +3566,11 @@
         justify-content: center;
         align-items: center;
         transition: 0.3s;
+		@include nsm {
+			width: 3rem;
+        	height: 3rem;
+			right: 0.65rem;
+		}
     }
     &__up-arrow::before {
         width: 1.8rem;
@@ -3403,6 +3579,11 @@
 		content: ' ';
 		background-image: url('../img/arrow-up.svg');
 		background-size: 1.8rem 2.5rem;
+		@include nsm {
+			width: 1.3rem;
+        	height: 2rem;
+			background-size: 1.3rem 2rem;
+		}
     }
     &__up-arrow:hover{
        transform: scale(1.1);
