--- a/#src/scss/test.scss
+++ b/#src/scss/test.scss
@@ -281,14 +281,15 @@ ul {
       font-size: 16px;
       a {
         display: block;
+        text-align: right;
         position: relative;
-        padding: 15px 20px;
+        padding: 15px 30px 15px 20px;
         color: $colorw;
         background: $pryme-alt;
         
         .navtrigger {
           position: absolute;
-          right: 0;
+          right: -45%;
           top: 0;
           bottom: 0;
           width: 100%;
